--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,20 +145,22 @@
 }
 
 @keyframes blob {
-  0%,
-  100% {
+  0% {
     transform: translate(0px, 0px) scale(1);
   }
   33% {
-    transform: translate(30px, -20px) scale(1.1);
+    transform: translate(30px, -50px) scale(1.2);
   }
   66% {
-    transform: translate(-20px, 30px) scale(0.9);
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+  100% {
+    transform: translate(0px, 0px) scale(1);
   }
 }
 
 .animate-blob {
-  animation: blob 8s infinite;
+  animation: blob 6s infinite ease-in-out;
 }
 
 .animation-delay-2000 {
